fixed footer overlap issue

--- a/public/scss/partials/_basic-style.scss
+++ b/public/scss/partials/_basic-style.scss
@@ -297,6 +297,7 @@ footer {
   flex-direction: row;
   justify-content: space-around;
   position: fixed;
+  z-index:1000;
   bottom: 0px;
   height: 2em;
   width: 100%;
